Fix: articles would overflow screen on mobile devices

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -143,6 +143,9 @@ body > header > div > div {
         padding: 5px 20px;
         margin-right: -20px;
     }
+    section.article {
+        display: inline-block;
+    }
 }
 
 .archives h2 {
@@ -204,7 +207,6 @@ body > header > div > div {
 
 /* article */
 section.article {
-    display: inline-block;
     margin: 0 auto;
     padding: 30px 0;
     vertical-align: top;
